# fastapi-email

./: .env.template  README.md  config.py  main.py  models.py  pyproject.toml  utils.py
app/: config.py  db.py  exceptions.py  main.py  models.py  schemas.py  utils.py
app/templates/: html_template.html
templates/: html_template.html
